--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -299,7 +299,7 @@
     margin: 0;
     color: #444444;
     font-size: 18px;
-    line-height: 1.4em;
+    line-height: 1.5em;
 }
 
 .slideContent a {
@@ -393,7 +393,8 @@
     background-size: cover;
     color: #fff;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -469,7 +470,8 @@
     padding: 120px 0 300px;
     background: #fff;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -550,7 +552,8 @@
     background-size: cover;
     color: #fff;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -623,7 +626,8 @@
     background-size: cover;
     color: #fff;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -718,7 +722,8 @@
     padding: 150px 0 0;
     background: #333333;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -837,7 +842,8 @@
     padding: 150px 0 250px;
     background: #556075;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -910,8 +916,8 @@
 }
 
 .eventNavBtn {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     background-image: url('/images/home/left-arrow.svg');
     background-size: contain;
     background-repeat: no-repeat;
@@ -927,7 +933,8 @@
     padding: 150px 0 250px;
     background: #ECECEC;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -988,7 +995,8 @@
     padding: 150px 0 200px;
     background: #848484;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
@@ -1131,7 +1139,8 @@
     padding: 120px 0 200px;
     background: #ECECEC;
     position: relative;
-    border-radius: 100px 100px 0 0;
+    /* border-radius: 100px 100px 0 0; */
+    border-radius: var(--border-home);
     margin-top: -100px;
     z-index: 1;
 }
