--- a/app/globals.css
+++ b/app/globals.css
@@ -106,6 +106,8 @@ p>em {
   display: block;
 }
 
+.staticWrapper{padding: 100px 0 0;}
+
 /*header*/
 /* .headerWrap{position:fixed;top:0;left:0;z-index:1000;display:flex;justify-content:space-between;align-items:center;padding:20px 60px;width:100%;transition:all 0.6s cubic-bezier(0.25,0.8,0.25,1);background:transparent;will-change:padding,background,box-shadow;} 
 .headerWrap.scrolled{background:#333;backdrop-filter:blur(8px);padding:10px 40px;box-shadow:0 4px 12px rgba(0,0,0,0.3);} 
