--- a/app/globals.css
+++ b/app/globals.css
@@ -141,7 +141,7 @@ p>em {
 }
 
 .headerWrap.scrolled .headerLogoSec img {
-  width: 420px !important;
+  width: 300px !important;
   height: auto !important;
 }
 
@@ -161,7 +161,7 @@ p>em {
 .headerNavSec>ul>li a {
   color: #fff;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 16px;
   transition: color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
@@ -178,12 +178,12 @@ p>em {
 .headerBadgeSec img {
   transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
   will-change: width, height;
-  width: 80px;
+  width: 60px;
 }
 
 .headerWrap.scrolled .headerBadgeSec img {
-  width: 80px !important;
-  height: 80px !important;
+  width: 60px !important;
+  height: 60px !important;
 }
 
 /* Submenu Styles */
@@ -575,7 +575,13 @@ p>em {
   }
 }
 
-@media screen and (min-width: 1300px) {}
+@media screen and (min-width: 1300px) {
+
+  /*header*/
+  .headerNavSec>ul>li a {
+    font-size: 18px;
+  }
+}
 
 @media only screen and (min-width : 1200px) {
   .container {
@@ -684,7 +690,7 @@ p>em {
     padding-right: 15px;
   }
 
-    :root {
+  :root {
     --border-home: 35px 35px 0 0;
   }
 
