--- a/app/globals.css
+++ b/app/globals.css
@@ -342,7 +342,7 @@ p>em {
 
 /*Footer*/
 .footerWrap {
-  padding: 140px 0;
+  padding: 100px 0;
   background: linear-gradient(rgba(20, 33, 61, 0.93), rgba(20, 33, 61, 0.93)), url('/images/footer-bg.jpg') no-repeat center center;
   background-size: cover;
   /* border-radius: 100px 100px 0 0; */
@@ -587,6 +587,11 @@ p>em {
   .headerRghtSec {
     gap: 40px;
   }
+
+  /*Footer*/
+  .footerWrap {
+    padding: 140px 0;
+  }
 }
 
 @media screen and (min-width: 1300px) {
@@ -598,6 +603,11 @@ p>em {
 }
 
 @media screen and (max-width: 1200px) {
+  .container {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   .headerRghtSec {
     flex-direction: row-reverse;
   }
@@ -616,12 +626,6 @@ p>em {
 
 @media only screen and (min-width : 1024px) {}
 
-@media only screen and (max-width: 1199px) {
-  .container {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
 
 @media only screen and (max-width: 991px) {
   .container {
