--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -54,3 +54,6 @@
 .applicationsInnerGridItemContent a { color: var(--blue); margin-top: 40px; font-size: 18px; line-height: 1em; display: inline-block; position: relative; padding-right: 30px; transition: color 0.3s ease; }
 .applicationsInnerGridItemContent a:after { content: ""; position: absolute; right: 0; top: 5px; width: 20px; height: 20px; background-image: url("/images/icons/right-arrow-red.svg"); background-size: contain; background-repeat: no-repeat; cursor: pointer; transition: transform 0.3s ease; }
 .applicationsInnerGridItemContent a:hover:after { transform: translateX(3px); }
+
+/*approvals-and-associates page*/
+
